searchアクションでkimonoテーブルの情報が取得できるよう修正

--- a/app/views/kimonos/search.html.erb
+++ b/app/views/kimonos/search.html.erb
@@ -1,8 +1,6 @@
-<h2>検索</h2>
-
-<%= search_form_for @p, url: kimonos_search_path do |f| %>
-  <%= f.label :tpo_eq, 'TPO' %>
-  <%= f.collection_select :tpo_eq, @kimonos, :tpo_id, :tpo,  include_blank: '指定なし' %>
+<%= search_form_for @p, url: search_kimonos_path do |f| %>
+  <%= f.label :memo_eq, '種類' %>
+  <%= f.collection_select :memo_eq, @kimonos, :memo, :memo,  include_blank: '指定なし' %>
   <br>
   <%= f.submit '検索' %>
 <% end %>
