@resultsからincludeを削除

--- a/app/views/kimonos/search.html.erb
+++ b/app/views/kimonos/search.html.erb
@@ -1,25 +1,14 @@
-<%= search_form_for @p, url: search_kimonos_path do |f| %>
+<%= search_form_for @p, url:  result_kimonos_path do |f| %>
   <%= f.label :kimono_name_id_eq, '種類' %>
   <%= f.collection_select :kimono_name_id_eq, KimonoName.all, :id, :name,  include_blank: '指定なし' %>
   <br>
   <%= f.submit '検索' %>
-<% end %>
-
-<%# 検索結果の個数で条件分岐 %>
-<% if @results.length !=0 %>
-  <% @results.each do |result| %>
+    <br>
+    <% @kimonos.each do |kimono| %>
     <td>
     <br>
     <li>
-      <%= result.name %>
-      <%= result.size %>
-      <%= result.status %>
-      <%= result.price %>
-      <%= result.category.name %>
+      <%= kimono.kimono_name.name %>
     </li>
-  <% end %>
-<% else %>
-  該当する商品はありません
+    <% end %>
 <% end %>
-<br>
-<%= link_to 'トップページへ戻る', root_path %>
