分類(kimono_genre)で検索できるよう実装

--- a/app/views/kimonos/search.html.erb
+++ b/app/views/kimonos/search.html.erb
@@ -1,6 +1,8 @@
 <%= search_form_for @p, url:  result_kimonos_path do |f| %>
   <%= f.label :kimono_name_id_eq, '種類' %>
   <%= f.collection_select :kimono_name_id_eq, KimonoName.all, :id, :name,  include_blank: '指定なし' %>
+  <%= f.label :kimono_genre_id_eq, '分類' %>
+  <%= f.collection_select :kimono_genre_id_eq, KimonoGenre.all, :id, :name,  include_blank: '指定なし' %>
   <br>
   <%= f.submit '検索' %>
     <br>
