TPO、素材での検索。search,result画面に画像表示。

--- a/app/views/kimonos/result.html.erb
+++ b/app/views/kimonos/result.html.erb
@@ -7,6 +7,7 @@
     <td>
     <br>
     <li>
+      <%= image_tag result.image.variant(resize: '300x300'), class: "goods-img" if result.image.attached?%>
       <%= result.kimono_name.name %>
     </li>
   <% end %>
