--- a/app/views/kimonos/search.html.erb
+++ b/app/views/kimonos/search.html.erb
@@ -3,6 +3,10 @@
   <%= f.collection_select :kimono_name_id_eq, KimonoName.all, :id, :name,  include_blank: '指定なし' %>
   <%= f.label :kimono_genre_id_eq, '分類' %>
   <%= f.collection_select :kimono_genre_id_eq, KimonoGenre.all, :id, :name,  include_blank: '指定なし' %>
+  <%= f.label :tpo_id_eq, 'TPO' %>
+  <%= f.collection_select :tpo_id_eq, Tpo.all, :id, :name,  include_blank: '指定なし' %>
+  <%= f.label :material_id_eq, '素材' %>
+  <%= f.collection_select :material_id_eq, Material.all, :id, :name,  include_blank: '指定なし' %>
   <br>
   <%= f.submit '検索' %>
     <br>
@@ -10,6 +14,7 @@
     <td>
     <br>
     <li>
+      <%= image_tag kimono.image.variant(resize: '300x300'), class: "goods-img" if kimono.image.attached?%>
       <%= kimono.kimono_name.name %>
     </li>
     <% end %>
