--- a/app/views/kimonos/search.html.erb
+++ b/app/views/kimonos/search.html.erb
@@ -7,6 +7,10 @@
   <%= f.collection_select :tpo_id_eq, Tpo.all, :id, :name,  include_blank: '指定なし' %>
   <%= f.label :material_id_eq, '素材' %>
   <%= f.collection_select :material_id_eq, Material.all, :id, :name,  include_blank: '指定なし' %>
+
+  <%= f.label :season_cont, '時期、色・柄、メモ' %>
+  <%= f.search_field :season_or_color_pattern_or_memo_cont %>
+
   <br>
   <%= f.submit '検索' %>
     <br>
