searchページのcss作成

--- a/app/assets/stylesheets/kimonos/new.css
+++ b/app/assets/stylesheets/kimonos/new.css
@@ -1,4 +1,4 @@
-.new-page {
+/* .new-page {
   width: 100vw;
   padding: 2vh 5vw;
 }
@@ -34,7 +34,6 @@
   width: 30vw;
   padding: auto;
   margin-bottom: 30px;
-  /* background-color: skyblue; */
 }
 
 .field-name {
@@ -76,4 +75,4 @@
   left: 0;
   right: 0;
   margin: auto;
-}
+} */
