--- a/app/assets/stylesheets/kimonos/search.css
+++ b/app/assets/stylesheets/kimonos/search.css
@@ -1,4 +1,4 @@
-.new-page {
+/* .new-page {
   width: 100vw;
   padding: 2vh 5vw;
   text-align: center;
@@ -58,4 +58,4 @@
   font-size: 20px;
   font-family: serif;
   background-color: white;
-} 
+}  */
