--- a/app/views/kimonos/new.html.erb
+++ b/app/views/kimonos/new.html.erb
@@ -1,5 +1,4 @@
 <%= render "share/header" %>
-<link rel="stylesheet" href="kimonos/new.css">
 
 <div class="new-page">
 
@@ -18,7 +17,7 @@
         <div class="img-upload">
           <div class="field-name">画像</div>
           <div class="click-upload">
-            <p>クリックしてファイルをアップロード</p>
+            <p>クリックしてファイルをアップ</p>
             <%= f.file_field :image, id:"goods-image" %>
           </div>
         </div>
