--- a/app/views/kimonos/search.html.erb
+++ b/app/views/kimonos/search.html.erb
@@ -1,5 +1,4 @@
 <%= render "share/header" %>
-<link rel="stykesheet" href="kimono/new.css">
 
 <div class="new-page">
 
@@ -34,7 +33,7 @@
 
       <div class="field">
         <div class="field-name">時期<br />色柄<br />メモ</div>
-        <%= f.search_field :season_or_color_pattern_or_memo_cont, class:"goods-text" %>
+        <%= f.search_field :season_or_color_pattern_or_memo_cont, class:"search-text" %>
       </div>
 
       <div class="new-submit">
