--- a/app/views/kimonos/edit.html.erb
+++ b/app/views/kimonos/edit.html.erb
@@ -1,5 +1,4 @@
 <%= render "share/header" %>
-<link rel="stylesheet" href="kimono/new.css">
 
 <div class="new-page">
 
@@ -15,9 +14,9 @@
       <%= render "share/error_messages", model: f.object %>
 
       <div class="img-upload">
-        <div>画像</div>
+        <div class="field-name">画像</div>
         <div class="click-upload">
-          <p>クリックしてファイルをアップロード</p>
+          <p>クリックしてファイルをアップ</p>
           <%= f.file_field :image, id:"kimono-image" %>
         </div>
       </div>
