obi,itemのnew,edit.htmlをkimonos/new.cssが使えるよう修正

--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,5 +1,5 @@
 <%= render "share/header" %>
-<link rel="stylesheet" href="kimono/new.css">
+
 
 <div class="new-page">
 
@@ -15,9 +15,9 @@
       <%= render "share/item_error_messages", model: f.object %>
 
       <div class="img-upload">
-        <div>画像</div>
+        <div class="field-name">画像</div>
         <div class="click-upload">
-          <p>クリックしてファイルをアップロード</p>
+          <p>クリックしてファイルをアップ</p>
           <%= f.file_field :image, id:"goods-image" %>
         </div>
       </div>
