--- a/app/views/obis/new.html.erb
+++ b/app/views/obis/new.html.erb
@@ -1,5 +1,4 @@
 <%= render "share/header" %>
-<link rel="stylesheet" href="kimono/new.css">
 
 <div class="new-page">
 
@@ -17,7 +16,7 @@
       <div class="img-upload">
         <div class="field-name">画像</div>
         <div class="click-upload">
-          <p>クリックしてファイルをアップロード</p>
+          <p>クリックしてファイルをアップ</p>
           <%= f.file_field :image, id:"goods-image" %>
         </div>
       </div>
