--- a/app/views/kimonos/result.html.erb
+++ b/app/views/kimonos/result.html.erb
@@ -1,16 +1,29 @@
-<h1>
-  検索結果
-</h1>
-<%# 検索結果の個数で条件分岐 %>
+<%= render "share/header" %>
 
-  <% @results.each do |result| %>
-    <td>
-    <br>
-    <li>
-      <%= image_tag result.image.variant(resize: '300x300'), class: "goods-img" if result.image.attached?%>
-      <%= result.kimono_name.name %>
-    </li>
-  <% end %>
+<div class="index-page">
 
-<br>
-<%= link_to 'トップページへ戻る', root_path %>
+  <div class="index-header">
+    <h2 class="index-title">検索結果</h2>
+  </div>
+
+  <hr class="line">
+
+  <div class="result-contents">
+    <ul class="lists">
+    <% @results.each do |result| %>
+      <li class="list">
+        
+        <%= image_tag result.image.variant(resize: '300x300'), class: "goods-img" if result.image.attached?%>
+        <div class="info">
+          <div class="goods-name">
+            <%= result.kimono_name.name %>
+          </div>
+        </div>
+      </li>
+    <% end %>
+    </ul>
+  </div>
+
+  <%= link_to '着物検索に戻る',  search_kimonos_path, class: "link-btn" %>
+</div>
+<%= render "share/footer" %>
