--- a/app/views/obis/search.html.erb
+++ b/app/views/obis/search.html.erb
@@ -9,16 +9,11 @@
   <hr class="line">
 
   <div class="new-form">
-    <%= search_form_for @p, url:  result_kimonos_path do |f| %>
+    <%= search_form_for @p, url:  result_obis_path do |f| %>
 
       <div class="field">
         <div class="field-name">種類</div>
-        <%= f.collection_select :kimono_name_id_eq, KimonoName.all, :id, :name,  {include_blank: '指定なし'}, {class:"pulldown-select"} %>
-      </div>
-
-      <div class="field">
-        <div class="field-name">分類</div>
-        <%= f.collection_select :kimono_genre_id_eq, KimonoGenre.all, :id, :name,  {include_blank: '指定なし'}, {class:"pulldown-select"} %>
+        <%= f.collection_select :obi_name_id_eq, ObiName.all, :id, :name,  {include_blank: '指定なし'}, {class:"pulldown-select"} %>
       </div>
 
       <div class="field">
