--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -22,8 +22,9 @@
 }
 
 .menu-logo{
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
+  margin-bottom: 15px;
   display: block;
   margin-left: auto;
   margin-right: auto;
