--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -2,32 +2,39 @@
   width: 100vw;
   height: 35vh;
   padding: 2vh 5vw;
-}
-
-.header-logo{
   padding: 25px 25px ;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+  background-color: wheat;
 }
 
 .hidden{
   display: none;
 }
 
-.menu{
-  width: 400px;
-  height: 100px;
-  flex-direction: column;
+.logos {
+  /* width: 400px; */
+  /* height: 100px; */
+  display: flex;
+  justify-content: flex-end;
   /* border: 1px solid red; */
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .menu-logo{
   width: 60px;
   height: 60px;
   margin-bottom: 15px;
-  display: block;
+  /* position: relative; */
+  /* display: block;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
 }
 
 .menu-lists{
@@ -37,10 +44,14 @@
   writing-mode: vertical-rl;
   text-orientation: upright;
   margin-left: auto;
-  margin-right: auto; 
+  margin-right: auto;
+
+  /* position: absolute;
+  margin-top: 0;
+  margin-right: 0; */
 }
 
-.now-login-menu, .not-login-menu {
+/* .now-login-menu, .not-login-menu {
   list-style-type: none;
 }
 
@@ -50,4 +61,4 @@
 
 .menu-bar {
   margin: auto 30px;
-}
+}  */
