--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -1,12 +1,12 @@
 .header{
   width: 100vw;
-  height: 35vh;
+  height: 20vh;
   padding: 2vh 5vw;
   padding: 25px 25px ;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  background-color: wheat;
+  /* background-color: wheat; */
 }
 
 .hidden{
