--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -30,7 +30,7 @@
 .menu-logo{
   width: 60px;
   height: 60px;
-  margin-bottom: 15px;
+  /* margin-bottom: 5px; */
   /* position: relative; */
   /* display: block;
   margin-left: auto;
