--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -45,7 +45,7 @@
   text-orientation: upright;
   margin-left: auto;
   margin-right: auto;
-
+  text-decoration: none;
   /* position: absolute;
   margin-top: 0;
   margin-right: 0; */
