--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -48,7 +48,7 @@
 
       <%# 検索 %>
       <div class="menu" id="menu">
-        <%= image_tag "search_logo.png", class:"menu-logo", id:"search-logo" %>
+        <%= image_tag "search_logo.png", class:"search-logo", id:"search-logo" %>
 
         <%# 検索のプルダウン %>
         <div class="menu-lists hidden" id="search-pull-down">
@@ -67,4 +67,3 @@
       </div> 
     </div>
 </header>
-<%# <script scr="_header.js"></script> %>
