ユーザー新規登録ができる時のテストコード

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
         <div class="user-field-name">
           <%= f.label :nickname %>（10文字まで）<br />
         </div>
-        <div class="user-field-holder">
+        <div class="field-holder">
           <%= f.text_field :nickname, autofocus: true, maxlength: "10" , class: 'field-holder'%>
         </div>
       </div>
