--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -5,7 +5,7 @@
     <%# メニュー %>
     <div class="logos" id="logos">
       <div class="menu">
-        <%= image_tag "menu_logo.png", class:"menu-logo", id:"menu-logo" %>
+        <%= image_tag "menu_logo.png", class:"menu-logo", id:"menu-logo", name:"menulog" %>
 
         <%# メニューのプルダウン %>
         <div class="menu-lists hidden" id="pull-down">
